show issues fixed and testing booking TODO ScreenTime(issue)